<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="361dp"
        android:layout_height="144dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/welcomeText"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/profileButton"
        android:layout_width="143dp"
        android:layout_height="57dp"
        android:text="@string/profileButtonText"
        app:layout_constraintStart_toStartOf="@+id/postListingButton"
        app:layout_constraintTop_toBottomOf="@+id/postListingButton" />

    <Button
        android:id="@+id/postListingButton"
        android:layout_width="143dp"
        android:layout_height="57dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="84dp"
        android:text="@string/itemPostButtonText"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/viewListingButton"
        android:layout_width="143dp"
        android:layout_height="57dp"
        android:text="@string/view_listings"
        app:layout_constraintStart_toStartOf="@+id/profileButton"
        app:layout_constraintTop_toBottomOf="@+id/profileButton" />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="156dp"
        android:layout_marginBottom="116dp"
        android:text="@string/logoutText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
